[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Async managed connections"
documentation = "http://maidsafe.net/managed_connections/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "crust"
readme = "README.md"
repository = "https://github.com/dirvine/managed_connections"
version = "0.8.2"

[dependencies]
bytes = "0.3.0"
cbor = "~0.3.16"
config_file_handler = "~0.0.1"
crossbeam = "~0.1.6"
get_if_addrs = "~0.3.0"
ip = "~1.1.0"
itertools = "~0.4.7"
libc = "~0.2.6"
log = "~0.3.4"
maidsafe_utilities = "~0.2.0"
memmap = "~0.2.2"
mio = "0.5.0"
nat_traversal = "~0.0.3"
net2 = "~0.2.20"
rand = "~0.3.12"
rustc-serialize = "~0.3.16"
secure_serialisation = "~0.2.0"
service_discovery = "0.2.1"
slab = "0.1.3"
socket_addr = "~0.0.1"
sodiumoxide = "~0.0.9"
temp_utp = "~0.8.0"
term = "~0.2.14"
time = "~0.1.34"
void = "1.0.1"
quick-error = "~1.0.0"

[dependencies.clippy]
optional = true
version = "~0.0.37"

[dev-dependencies]
docopt = "~0.6.78"
env_logger = "~0.3.2"
void = "~1.0.1"

[[example]]
bench = false
name = "ci_test"
path = "examples/ci_test.rs"
test = false
